
* Isabelle/jEdit provides builtin navigation support, with actions
navigate-backwards (AS-LEFT) and navigate-forwards (AS-RIGHT). These
actions are available via arrow icons in the Search Bar, which is now
enabled by default. The old plugins Navigator and Code2HTML are now
longer included. The old-fashioned toolbar, with its old Navigator
icons, is now disabled by default.


*** HOL ***

* Normalization by evaluation (method "normalization", command value) could
yield false positives due to incomplete handling of polymorphism in certain
situations; this is now corrected.

* Theory "HOL-Library.Code_Target_Bit_Shifts" incorporated into HOL-Main.
Minor INCOMPATIBILITY.

* If "HOL-Library.Code_Target_Nat" is imported, bit operations on nat are
implemented by bit operations on target-language integers.
Minor INCOMPATIBILITY.

* Theory "HOL.Fun":
  - Added lemmas.
      antimonotone_on_inf_fun
      antimonotone_on_sup_fun
      mono_on_invE
      mono_on_strict_invE
      monotone_on_inf_fun
      monotone_on_sup_fun
      strict_mono_on_eq
      strict_mono_on_less
      strict_mono_on_less_eq
  - Removed lemmas. Minor INCOMPATIBILITY.
      mono_on_greaterD (use mono_invE instead)

* Theory "HOL.Relation":
  - Changed definition of predicate refl_on to not constrain the domain
    and range of the relation. To get the old semantics, explicitely use
    the formula "r \<subset> A \<times> A \<and> refl_on A r". INCOMPATIBILITY.
  - Removed predicate single_valuedp. Use predicate right_unique instead.
    INCOMPATIBILITY.
  - Removed lemmas. Minor INCOMPATIBILITY.
      antisym_bot[simp] (use antisymp_on_bot instead)
      antisym_empty[simp] (use antisym_on_bot instead)
      reflp_mono (use reflp_on_mono_strong instead)
      trans_empty[simp] (use trans_on_bot instead)
  - Strengthened lemmas. Minor INCOMPATIBILITY.
      refl_on_empty[simp]
  - Strengthened (and renamed) lemmas. Minor INCOMPATIBILITY.
      antisymp_equality[simp] ~> antisymp_on_equality[simp]