@@ -9,7 +9,7 @@ elm-0.19.1
 easychair-3.5
 eptcs-1.7.0
 find_facts_web-20250223
-flatlaf-3.5.4-1
+flatlaf-3.6
 foiltex-2.1.4b
 idea-icons-20210508
 isabelle_fonts-20241227
